--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@rollup/plugin-typescript": "^8.1.0",
     "autoprefixer": "^10.1.0",
     "cssnano": "^4.1.10",
+    "json-query": "^2.2.2",
     "node-sass": "^5.0.0",
     "nollup": "^0.13.13",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.2.1",
     "prettier": "^2.2.1",
     "prettier-plugin-svelte": "^1.4.2",
@@ -20,6 +22,7 @@
     "rollup-plugin-typescript": "^1.0.1",
     "sass": "^1.30.0",
     "svelte": "^3.0.0",
+    "svelte-materialify": "^0.3.4",
     "svelte-preprocess": "^4.6.1",
     "tailwindcss": "^2.0.2",
     "tslib": "^2.0.3",
@@ -33,7 +36,8 @@
     "dev:rollup": "rollup -c -w",
     "dev:livereload": "rollup -c -w --environment LIVERELOAD",
     "dev:nollup": "nollup -c --hot --port 5000 --content-base ./public",
-    "dev": "npm run dev:nollup",
-    "start": "sirv public"
+    "dev": "run-s fix:material dev:nollup",
+    "start": "sirv public",
+    "fix:material": "cp ./.replacements/_variables.scss node_modules/svelte-materialify/src/styles/_variables.scss"
   }
 }
