--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "rollup-plugin-typescript": "^1.0.1",
     "sass": "^1.30.0",
     "svelte": "^3.0.0",
+    "svelte-dnd-action": "^0.6.25",
     "svelte-materialify": "^0.3.4",
     "svelte-preprocess": "^4.6.1",
     "tailwindcss": "^2.0.2",
