--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
     "@rollup/plugin-typescript": "^8.1.0",
+    "@types/facebook-js-sdk": "^3.3.1",
     "autoprefixer": "^10.1.0",
     "cssnano": "^4.1.10",
     "json-query": "^2.2.2",
